--- a/Hrm.Recruitment.ApplicationCore/Hrm.Recruitment.ApplicationCore.csproj
+++ b/Hrm.Recruitment.ApplicationCore/Hrm.Recruitment.ApplicationCore.csproj
@@ -13,6 +13,9 @@
     <None Remove="Contract\" />
     <None Remove="Contract\Repository\" />
     <None Remove="Contract\Service\" />
+    <None Remove="Model\" />
+    <None Remove="Model\Request\" />
+    <None Remove="Model\Response\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.3">
@@ -26,5 +29,8 @@
     <Folder Include="Contract\" />
     <Folder Include="Contract\Repository\" />
     <Folder Include="Contract\Service\" />
+    <Folder Include="Model\" />
+    <Folder Include="Model\Request\" />
+    <Folder Include="Model\Response\" />
   </ItemGroup>
 </Project>
