add dependency injection

--- a/Hrm.Recruitment.APILayer/Hrm.Recruitment.APILayer.csproj
+++ b/Hrm.Recruitment.APILayer/Hrm.Recruitment.APILayer.csproj
@@ -28,5 +28,9 @@
   <ItemGroup>
     <None Remove="Microsoft.EntityFrameworkCore.Tools" />
     <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
+    <None Remove="Controllers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 </Project>
