add interview entities

--- a/Hrm.Interview.APILayer/appsettings.json
+++ b/Hrm.Interview.APILayer/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "HrmInterviewDb": "Data Source=localhost,1433;Initial Catalog=HrmInterviewDb;User Id=sa;Password=SGF86pop;TrustServerCertificate=True",
+    "HrmInterviewDbDocker": "Data Source=10.0.0.246,1433;Initial Catalog=HrmInterviewDb;User Id=sa;Password=SGF86pop;TrustServerCertificate=True"
+  }
 }
 
