add onboard entity

--- a/Hrm.Onboard.APILayer/appsettings.json
+++ b/Hrm.Onboard.APILayer/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "HrmOnboardDb": "Data Source=localhost,1433;Initial Catalog=HrmOnboardDb;User Id=sa;Password=SGF86pop;TrustServerCertificate=True",
+    "HrmOnboardDbDocker": "Data Source=10.0.0.246,1433;Initial Catalog=HrmOnboardDb;User Id=sa;Password=SGF86pop;TrustServerCertificate=True"
+  }
 }
 
