--- a/Hrm.Authen.APILayer/Properties/launchSettings.json
+++ b/Hrm.Authen.APILayer/Properties/launchSettings.json
@@ -12,6 +12,7 @@
     "Hrm.Authen.APILayer": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "http://localhost:28184",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
