--- a/Hrm.Interview.APILayer/appsettings.json
+++ b/Hrm.Interview.APILayer/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "HrmInterviewDb": "Data Source=localhost,1433;Initial Catalog=HrmInterviewDb;User Id=sa;Password=SGF86pop;TrustServerCertificate=True",
     "HrmInterviewDbDocker": "Data Source=10.0.0.246,1433;Initial Catalog=HrmInterviewDb;User Id=sa;Password=SGF86pop;TrustServerCertificate=True"
-  }
+  },
+  "RecruitApiUrl": "http://10.0.0.246:59004/api/"
 }
 
