update left communication between services

--- a/Hrm.Interview.APILayer/appsettings.json
+++ b/Hrm.Interview.APILayer/appsettings.json
@@ -10,6 +10,7 @@
     "HrmInterviewDb": "Data Source=localhost,1433;Initial Catalog=HrmInterviewDb;User Id=sa;Password=SGF86pop;TrustServerCertificate=True",
     "HrmInterviewDbDocker": "Data Source=10.0.0.246,1433;Initial Catalog=HrmInterviewDb;User Id=sa;Password=SGF86pop;TrustServerCertificate=True"
   },
-  "RecruitApiUrl": "http://10.0.0.246:59004/api/"
+  "RecruitApiUrl": "http://10.0.0.246:49517/api/",
+  "OnboardApiUrl": "http://10.0.0.246:49518/api/"
 }
 
