--- a/Hrm.Recruitment.APILayer/Hrm.Recruitment.APILayer.csproj
+++ b/Hrm.Recruitment.APILayer/Hrm.Recruitment.APILayer.csproj
@@ -30,8 +30,10 @@
     <None Remove="Microsoft.EntityFrameworkCore.Tools" />
     <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
     <None Remove="Controllers\" />
+    <None Remove="Model\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Model\" />
   </ItemGroup>
 </Project>
